[package]
name = "solw"
version = "0.1.0"
edition = "2021"
description = "Solana CLI wallet"
license = "MIT"

[[bin]]
name = "solw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
bip39 = { version = "2", features = ["rand"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
zeroize = "1"
ed25519-dalek-bip32 = "0.3"
bs58 = "0.5"
hex = "0.4"
inquire = "0.7"
qrcode = "0.14"
owo-colors = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
curve25519-dalek = "4"

[dev-dependencies]
tempfile = "3"
